--- a/index.html
+++ b/index.html
@@ -1,270 +1,181 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="theme-color" content="#0a84ff">
-  <link rel="manifest" href="manifest.json">
-  <title>Thermostat</title>
-  <style>
-    /* ---- Background canvas with subtle gradient + dots ---- */
-    :root {
-      --bg1: #0e1217;
-      --bg2: #151b22;
-      --glass: rgba(255,255,255,0.08);
-      --glass-border: rgba(255,255,255,0.15);
-      --text: #e6e9ed;
-      --muted: #9aa0a6;
-      --button:#26303a; --button-active:#34404d;
-    }
-    @media (prefers-color-scheme: light) {
-      :root {
-        --bg1:#eaf1fb; --bg2:#f7f9fe; --glass: rgba(255,255,255,0.7);
-        --glass-border: rgba(0,0,0,0.08); --text:#15202b; --muted:#5b6670;
-        --button:#eef2f6; --button-active:#e2e8ef;
-      }
-    }
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: -apple-system, system-ui, "SF Pro Text", "Helvetica Neue", Arial, sans-serif;
-      color: var(--text);
-      background: radial-gradient(1200px 800px at 20% -10%, var(--bg2), var(--bg1)) fixed;
-      overflow: hidden;
-      -webkit-user-select: none;
-      -webkit-touch-callout: none;
-    }
-    /* floating layout */
-    .stage {
-      position: relative;
-      height: 100%;
-      padding: max(20px, env(safe-area-inset-top)) max(20px, env(safe-area-inset-right)) max(24px, env(safe-area-inset-bottom)) max(20px, env(safe-area-inset-left));
-      display: grid;
-      place-items: center;
-    }
-    /* decorative background dots */
-    .dots {
-      position: absolute; inset: 0; pointer-events: none;
-      background-image:
-        radial-gradient(2px 2px at 10% 20%, rgba(255,255,255,0.08) 30%, transparent 30%),
-        radial-gradient(2px 2px at 80% 30%, rgba(255,255,255,0.06) 30%, transparent 30%),
-        radial-gradient(2px 2px at 30% 80%, rgba(255,255,255,0.05) 30%, transparent 30%);
-      background-repeat: no-repeat;
-    }
-    /* frosted floating card */
-    .card {
-      width: min(420px, 92vw);
-      border-radius: 18px;
-      padding: 16px;
-      background: var(--glass);
-      border: 1px solid var(--glass-border);
-      box-shadow:
-        0 10px 30px rgba(0,0,0,0.35),
-        0 0 0 1px rgba(255,255,255,0.04) inset;
-      backdrop-filter: blur(14px) saturate(1.1);
-      -webkit-backdrop-filter: blur(14px) saturate(1.1);
-    }
-    .handle {
-      width: 44px; height: 4px; border-radius: 999px; margin: 4px auto 8px;
-      background: rgba(255,255,255,0.35);
-    }
-    .title{ font-weight:700; font-size:15px; letter-spacing:.4px; color: var(--muted); display:flex; align-items:center; gap:10px; }
-    .row{ display:flex; gap:10px; align-items:center; justify-content:center; }
-    .spacer{ height:12px; }
-    .temp-display{ font-size:56px; font-weight:800; text-align:center; line-height:1; letter-spacing:.5px; }
-    @media (max-width: 350px){ .temp-display{ font-size:42px; } }
-    .badge{ font-size:12px; padding:4px 8px; border-radius:999px; background:#24303b20; color:var(--muted); }
-    .segments{ display:flex; gap:8px; justify-content:center; flex-wrap:wrap; }
-    .seg{ background:var(--button); color:var(--text); border-radius:12px; padding:10px 14px; font-weight:600; font-size:14px;
-      border:1px solid rgba(0,0,0,.06); transition:background .2s ease, transform .05s ease, border-color .2s ease; }
-    .seg:active{ transform:scale(.97); }
-    .seg.active{ background:var(--button-active); border-color:rgba(0,0,0,.15); }
-    .btn{ min-width:72px; background:var(--button); color:var(--text); border:1px solid rgba(0,0,0,.06); border-radius:14px; padding:18px 22px; font-size:16px; font-weight:700;
-      transition:background .2s ease, transform .05s ease, border-color .2s ease; }
-    .btn:active{ transform:scale(.97); }
-    .btn.up{ background:#203b29; border-color:rgba(124,217,146,.35); }
-    .btn.down{ background:#3b2a20; border-color:rgba(255,184,107,.35); }
-    .grid{ display:grid; grid-template-columns:1fr 1fr; gap:10px; }
-    .hint{ text-align:center; color:var(--muted); font-size:12px; margin-top:10px; }
-  
-.swipe-hint{
-  position:fixed;left:0;right:0;
-  bottom:calc(env(safe-area-inset-bottom) + 6px);
-  text-align:center;font-size:12px;opacity:.85;
-  color: var(--muted, #9aa0a6);
-  pointer-events:none;user-select:none;
+<meta charset="utf-8">
+<!-- Safe-area fix for iPhone home bar -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+<link rel="manifest" href="./manifest.json">
+<title>Thermostat</title>
+<style>
+html,body{
+  -webkit-user-select:none;
+  -webkit-touch-callout:none;
+  overscroll-behavior:none;
+  margin:0;
+  height:100%;
+  overflow:hidden;
+  background:#0e1217;
+  color:#e6e9ed;
+  font-family:-apple-system,system-ui,"SF Pro Text","Helvetica Neue",Arial,sans-serif;
+  padding-bottom:env(safe-area-inset-bottom);
 }
-
+.card{
+  width:min(420px,92vw);
+  margin:0 auto;
+  margin-top:6vh;
+  background:rgba(255,255,255,.05);
+  border-radius:18px;
+  padding:16px;
+  box-shadow:0 12px 28px rgba(0,0,0,.35);
+  backdrop-filter:blur(12px) saturate(1.05);
+  -webkit-backdrop-filter:blur(12px) saturate(1.05);
+  margin-bottom:calc(env(safe-area-inset-bottom) + 20px);
+}
+.title{font-weight:700;font-size:15px;letter-spacing:.4px;color:#9aa0a6;text-align:center;}
+.temp{font-size:56px;font-weight:800;text-align:center;line-height:1;margin:10px 0;}
+.btn{
+  min-width:72px;background:#26303a;color:#e6e9ed;border:none;
+  border-radius:14px;padding:18px 22px;font-size:16px;font-weight:700;
+  margin:6px;transition:background .2s,transform .05s;
+}
+.btn:active{transform:scale(.97);}
+.hint{text-align:center;color:#9aa0a6;font-size:12px;margin-top:14px;}
+.row{text-align:center;}
+.badge{font-size:12px;padding:4px 8px;border-radius:999px;background:#24303b20;color:#9aa0a6;}
+.segments{display:flex;gap:8px;justify-content:center;flex-wrap:wrap;}
+.seg{
+  background:#26303a;color:#e6e9ed;border-radius:12px;padding:10px 14px;
+  font-weight:600;font-size:14px;border:1px solid rgba(0,0,0,.06);
+  transition:background .2s,transform .05s,border-color .2s;
+  -webkit-tap-highlight-color:transparent;touch-action:manipulation;
+}
+.seg:active{transform:scale(.97);}
+.seg.active{background:#34404d;border-color:rgba(0,0,0,.15);}
+.swipe-hint{
+  position:fixed;
+  left:0;right:0;
+  bottom:calc(env(safe-area-inset-bottom) + 10px);
+  text-align:center;
+  font-size:12px;
+  color:var(--muted,#9aa0a6);
+  pointer-events:none;
+  user-select:none;
+  opacity:.9;
+  text-shadow:0 1px 2px rgba(0,0,0,.35);
+}
 </style>
 </head>
 <body>
-  <div class="stage">
-    <div class="dots"></div>
-    <div class="card">
-      <div class="handle"></div>
-      <div class="row" style="justify-content: space-between;">
-        <div class="title">THERMOSTAT</div>
-        <div id="badges" class="row" style="gap:6px;">
-          <div id="badge-mode" class="badge">MODE: —</div>
-          <div id="badge-fan" class="badge">FAN: —</div>
-        </div>
+  <div class="card">
+    <div class="row" style="justify-content:space-between;">
+      <div class="title">THERMOSTAT</div>
+      <div style="display:flex;gap:6px;align-items:center;">
+        <div id="badge-mode" class="badge">MODE: —</div>
+        <div id="badge-fan" class="badge">FAN: —</div>
       </div>
+    </div>
 
-      <div class="spacer"></div>
+    <div id="temp" class="temp">—°</div>
+    <div class="hint" id="temp-hint">Setpoint</div>
 
-      <div id="temp" class="temp-display">—°</div>
-      <div class="hint" id="temp-hint">Setpoint</div>
+    <div class="row">
+      <button id="btn-up" class="btn">▲ +1°</button>
+      <button id="btn-down" class="btn">▼ −1°</button>
+    </div>
 
-      <div class="spacer"></div>
+    <div class="title">Mode</div>
+    <div class="segments" id="mode-bar">
+      <button class="seg" data-mode="heat">Heat</button>
+      <button class="seg" data-mode="cool">Cool</button>
+      <button class="seg" data-mode="off">Off</button>
+    </div>
 
-      <div class="grid">
-        <button class="btn up"   id="btn-up">▲ +1°</button>
-        <button class="btn down" id="btn-down">▼ −1°</button>
-      </div>
-
-      <div class="spacer"></div>
-
-      <div class="title">Mode</div>
-      <div class="segments" id="mode-bar">
-        <button class="seg" data-mode="heat">Heat</button>
-        <button class="seg" data-mode="cool">Cool</button>
-        <button class="seg" data-mode="off">Off</button>
-      </div>
-
-      <div class="spacer"></div>
-
-      <div class="title">Fan</div>
-      <div class="segments" id="fan-bar">
-        <button class="seg" data-fan="on">On</button>
-        <button class="seg" data-fan="auto">Auto</button>
-      </div>
-
-      <div class="hint">Share → Add to Home Screen to install</div>
+    <div class="title" style="margin-top:10px;">Fan</div>
+    <div class="segments" id="fan-bar">
+      <button class="seg" data-fan="on">On</button>
+      <button class="seg" data-fan="auto">Auto</button>
     </div>
   </div>
-
-<script>
-  const store = {
-    get(key, fallback){ try { const v = localStorage.getItem(key); return v===null ? fallback : JSON.parse(v); } catch(e){ return fallback; } },
-    set(key, val){ try { localStorage.setItem(key, JSON.stringify(val)); } catch(e){} }
-  };
-
-  const state = {
-    mode: store.get("mode_state", "off"),
-    fan:  store.get("fan_state", "auto"),
-    heat: store.get("heat_set", 70),
-    cool: store.get("cool_set", 75),
-  };
-
-  function activeTemp(){ if (state.mode==="heat") return state.heat; if (state.mode==="cool") return state.cool; return null; }
-
-  function render(){
-    document.getElementById('badge-mode').textContent = "MODE: " + state.mode.toUpperCase();
-    document.getElementById('badge-fan').textContent  = "FAN: "  + state.fan.toUpperCase();
-    document.querySelectorAll('#mode-bar .seg').forEach(b=> b.classList.toggle('active', b.dataset.mode === state.mode));
-    document.querySelectorAll('#fan-bar .seg').forEach(b=> b.classList.toggle('active', b.dataset.fan === state.fan));
-    const t = activeTemp(); const tempEl = document.getElementById('temp'); const hint = document.getElementById('temp-hint');
-    if (t == null){
-      tempEl.textContent = "—°"; hint.textContent = "Setpoint (mode OFF)";
-      document.getElementById('btn-up').disabled = true; document.getElementById('btn-down').disabled = true;
-    } else {
-      tempEl.textContent = String(t) + "°"; hint.textContent = "Setpoint";
-      document.getElementById('btn-up').disabled = false; document.getElementById('btn-down').disabled = false;
-    }
-  }
-
-  function save(){
-    store.set("mode_state", state.mode);
-    store.set("fan_state", state.fan);
-    store.set("heat_set", state.heat);
-    store.set("cool_set", state.cool);
-  }
-
-  document.getElementById('btn-up').addEventListener('click', ()=>{
-    if (state.mode === "heat") state.heat += 1; else if (state.mode === "cool") state.cool += 1;
-    render(); save();
-  });
-  document.getElementById('btn-down').addEventListener('click', ()=>{
-    if (state.mode === "heat") state.heat -= 1; else if (state.mode === "cool") state.cool -= 1;
-    render(); save();
-  });
-  document.querySelectorAll('#mode-bar .seg').forEach(btn=>{
-    btn.addEventListener('click', ()=>{ state.mode = btn.dataset.mode; render(); save(); });
-  });
-  document.querySelectorAll('#fan-bar .seg').forEach(btn=>{
-    btn.addEventListener('click', ()=>{ state.fan = btn.dataset.fan; render(); save(); });
-  });
-
-  render();
-
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('./service-worker.js');
-    });
-  }
-</script>
 
   <div class="swipe-hint" aria-hidden="true">Swipe up to close</div>
 
 <script>
-(function(){
-  function byId(id){return document.getElementById(id);}
-  const upElOrig = byId('btn-up');
-  const downElOrig = byId('btn-down');
-  if (!upElOrig || !downElOrig) return;
+// ---------- state helpers ----------
+function has(k){return localStorage.getItem(k)!==null;}
+function get(k,d){return has(k)?localStorage.getItem(k):d;}
+function set(k,v){localStorage.setItem(k,v);}
 
-  // Replace buttons with clones to remove any existing listeners
-  function stripHandlers(el){
-    const clone = el.cloneNode(true);
-    el.parentNode.replaceChild(clone, el);
-    return clone;
-  }
-  const upEl = stripHandlers(upElOrig);
-  const downEl = stripHandlers(downElOrig);
+if(!has("mode_state"))set("mode_state","off");
+if(!has("fan_state"))set("fan_state","auto");
+if(!has("heat_set"))set("heat_set","70");
+if(!has("cool_set"))set("cool_set","75");
 
-  // Minimal helpers expected to exist from your app:
-  // state, render(), save(), and activeTemp() behavior
-  function clamp(v, lo, hi){ return Math.max(lo, Math.min(hi, v)); }
-  const MIN_SETPOINT = 40, MAX_SETPOINT = 90;
+const state={
+  mode:get("mode_state","off"),
+  fan:get("fan_state","auto"),
+  heat:parseInt(get("heat_set","70"),10),
+  cool:parseInt(get("cool_set","75"),10)
+};
 
-  function changeTemp(delta){
-    if (typeof state === 'undefined') return;
-    if (state.mode === "heat") {
-      state.heat = clamp((state.heat|0) + delta, MIN_SETPOINT, MAX_SETPOINT);
-    } else if (state.mode === "cool") {
-      state.cool = clamp((state.cool|0) + delta, MIN_SETPOINT, MAX_SETPOINT);
-    } else {
-      return;
-    }
-    try { render && render(); } catch(e){}
-    try { save && save(); } catch(e){}
-  }
+function activeTemp(){
+  if(state.mode==="heat")return state.heat;
+  if(state.mode==="cool")return state.cool;
+  return null;
+}
 
-  function setupHold(el, delta){
-    let holdTimer=null, repeatTimer=null, accelTimer=null;
-    const start=(e)=>{
-      e.preventDefault();
-      changeTemp(delta); // immediate step for taps
-      holdTimer=setTimeout(()=>{
-        repeatTimer=setInterval(()=>changeTemp(delta),120);
-        accelTimer=setTimeout(()=>{
-          clearInterval(repeatTimer);
-          repeatTimer=setInterval(()=>changeTemp(delta),60);
-        },1000);
-      },380);
-    };
-    const stop=()=>{ clearTimeout(holdTimer); clearTimeout(accelTimer); clearInterval(repeatTimer); };
-    el.addEventListener('pointerdown', start, {passive:false});
-    ['pointerup','pointerleave','pointercancel'].forEach(ev=> el.addEventListener(ev, stop));
-    document.addEventListener('visibilitychange', ()=>{ if (document.hidden) stop(); });
-    window.addEventListener('blur', stop);
-  }
+function render(){
+  document.getElementById("badge-mode").textContent="MODE: "+state.mode.toUpperCase();
+  document.getElementById("badge-fan").textContent="FAN: "+state.fan.toUpperCase();
+  document.querySelectorAll("#mode-bar .seg").forEach(b=>b.classList.toggle("active",b.dataset.mode===state.mode));
+  document.querySelectorAll("#fan-bar .seg").forEach(b=>b.classList.toggle("active",b.dataset.fan===state.fan));
+  const t=activeTemp();const tempEl=document.getElementById("temp");const hint=document.getElementById("temp-hint");
+  if(t==null){tempEl.textContent="—°";hint.textContent="Setpoint (mode OFF)";}
+  else{tempEl.textContent=t+"°";hint.textContent="Setpoint";}
+}
 
-  setupHold(upEl, +1);
-  setupHold(downEl, -1);
-})();
+function save(){
+  set("mode_state",state.mode);
+  set("fan_state",state.fan);
+  set("heat_set",state.heat);
+  set("cool_set",state.cool);
+}
+
+function changeTemp(delta){
+  if(activeTemp()==null)return;
+  if(state.mode==="heat")state.heat=Math.max(40,Math.min(90,state.heat+delta));
+  else if(state.mode==="cool")state.cool=Math.max(40,Math.min(90,state.cool+delta));
+  render();save();
+}
+
+// ---------- hold-to-repeat logic ----------
+function setupHold(el,delta){
+  let holdTimer=null,repeatTimer=null,accelTimer=null;
+  const start=(e)=>{
+    e.preventDefault();changeTemp(delta);
+    holdTimer=setTimeout(()=>{
+      repeatTimer=setInterval(()=>changeTemp(delta),120);
+      accelTimer=setTimeout(()=>{clearInterval(repeatTimer);
+        repeatTimer=setInterval(()=>changeTemp(delta),60);},1000);
+    },380);
+  };
+  const stop=()=>{clearTimeout(holdTimer);clearTimeout(accelTimer);clearInterval(repeatTimer);};
+  el.addEventListener("pointerdown",start,{passive:false});
+  ["pointerup","pointerleave","pointercancel"].forEach(v=>el.addEventListener(v,stop));
+  document.addEventListener("visibilitychange",()=>{if(document.hidden)stop();});
+  window.addEventListener("blur",stop);
+}
+setupHold(document.getElementById("btn-up"),+1);
+setupHold(document.getElementById("btn-down"),-1);
+
+// ---------- other controls ----------
+document.querySelectorAll("#mode-bar .seg").forEach(btn=>btn.addEventListener("click",()=>{
+  state.mode=btn.dataset.mode;render();save();
+}));
+document.querySelectorAll("#fan-bar .seg").forEach(btn=>btn.addEventListener("click",()=>{
+  state.fan=btn.dataset.fan;render();save();
+}));
+
+render();
 </script>
-
 </body>
 </html>
