--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!-- Safe-area + no zoom -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta name="theme-color" content="#0e1217">
   <link rel="manifest" href="./manifest.json">
-  <!-- Explicit iOS icon refs (keeps your existing PNGs) -->
   <link rel="apple-touch-icon" sizes="192x192" href="./icon-192.png">
   <link rel="apple-touch-icon" sizes="512x512" href="./icon-512.png">
   <title>Thermostat</title>
+
   <style>
-    /* ---- Theme (kept from your floating version) ---- */
     :root {
       --bg1: #0e1217;
       --bg2: #151b22;
@@ -29,19 +27,16 @@
       }
     }
 
-    /* ---- Base / layout ---- */
     * { box-sizing: border-box; }
-    html, body { height: 100%; }
+    html, body { height: 100%; margin: 0; overflow: hidden; }
     html, body {
       -webkit-user-select: none;
       -webkit-touch-callout: none;
       overscroll-behavior: none;
-      margin: 0;
-      overflow: hidden;
       background: radial-gradient(1200px 800px at 20% -10%, var(--bg2), var(--bg1)) fixed;
       color: var(--text);
       font-family: -apple-system, system-ui, "SF Pro Text", "Helvetica Neue", Arial, sans-serif;
-      padding-bottom: env(safe-area-inset-bottom); /* keep UI clear of the home bar */
+      padding-bottom: env(safe-area-inset-bottom);
     }
 
     .stage {
@@ -52,7 +47,6 @@
       place-items: center;
     }
 
-    /* decorative dots (same vibe as your floating build) */
     .dots {
       position: absolute; inset: 0; pointer-events: none;
       background-image:
@@ -62,29 +56,83 @@
       background-repeat: no-repeat;
     }
 
-    /* floating card (unchanged look) */
     .card {
+      position: relative;
       width: min(420px, 92vw);
       border-radius: 18px;
       padding: 16px;
       background: var(--glass);
       border: 1px solid var(--glass-border);
-      box-shadow:
-        0 10px 30px rgba(0,0,0,0.35),
-        0 0 0 1px rgba(255,255,255,0.04) inset;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.35), 0 0 0 1px rgba(255,255,255,0.04) inset;
       backdrop-filter: blur(14px) saturate(1.1);
       -webkit-backdrop-filter: blur(14px) saturate(1.1);
     }
 
+    /* gear button */
+    #settingsBtn {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      background: none;
+      border: none;
+      font-size: 20px;
+      line-height: 1;
+      padding: 4px;
+      cursor: pointer;
+      color: var(--muted);
+    }
+    #settingsBtn:hover { opacity: 0.8; }
+
+    /* settings panel */
+    #settingsPanel {
+      position: absolute;
+      top: 40px;
+      left: 8px;
+      width: min(280px, calc(100% - 16px));
+      background: var(--glass);
+      border: 1px solid var(--glass-border);
+      border-radius: 12px;
+      padding: 12px;
+      display: none;
+      box-shadow: 0 8px 24px rgba(0,0,0,.35), 0 0 0 1px rgba(255,255,255,.04) inset;
+      backdrop-filter: blur(10px) saturate(1.05);
+      -webkit-backdrop-filter: blur(10px) saturate(1.05);
+    }
+    #settingsPanel header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 8px;
+      font-weight: 700;
+      font-size: 14px;
+      color: var(--muted);
+    }
+    #closeSettings {
+      background: none;
+      border: none;
+      font-size: 18px;
+      line-height: 1;
+      color: var(--muted);
+      cursor: pointer;
+    }
+    .settings-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      font-size: 14px;
+      margin: 8px 0;
+    }
+    .settings-kv { color: var(--muted); }
+
     .row { display:flex; gap:10px; align-items:center; justify-content:space-between; }
-    .title { font-weight:700; font-size:15px; letter-spacing:.4px; color:var(--muted); } /* left aligned (no text-align center) */
+    .title { font-weight:700; font-size:15px; letter-spacing:.4px; color:var(--muted); }
+    .title-main { margin-left: 32px; }
     .sp { height:12px; }
     .temp { font-size:56px; font-weight:800; text-align:center; line-height:1; letter-spacing:.5px; }
     @media (max-width:350px){ .temp{ font-size:42px; } }
-
     .badge { font-size:12px; padding:4px 8px; border-radius:999px; background:#24303b20; color:var(--muted); }
     .segments { display:flex; gap:8px; justify-content:center; flex-wrap:wrap; }
-
     .seg {
       background: var(--button); color: var(--text);
       border-radius:12px; padding:10px 14px; font-weight:600; font-size:14px;
@@ -94,7 +142,6 @@
     }
     .seg:active { transform: scale(.97); }
     .seg.active { background: var(--button-active); border-color: rgba(0,0,0,.15); }
-
     .btn {
       min-width:72px; background:var(--button); color:var(--text);
       border:1px solid rgba(0,0,0,.06); border-radius:14px;
@@ -104,11 +151,9 @@
     .btn:active { transform: scale(.97); }
     .btn.up { background:#203b29; border-color:rgba(124,217,146,.35); }
     .btn.down { background:#3b2a20; border-color:rgba(255,184,107,.35); }
-
     .grid { display:grid; grid-template-columns:1fr 1fr; gap:10px; }
     .hint { text-align:center; color:var(--muted); font-size:12px; margin-top:10px; }
 
-    /* bottom-edge swipe hint (won't block the gesture) */
     .swipe-hint{
       position: fixed;
       left: 0; right: 0;
@@ -123,17 +168,31 @@
     }
   </style>
 </head>
+
 <body>
   <div class="stage">
     <div class="dots"></div>
 
     <div class="card">
+      <button id="settingsBtn" aria-label="Settings">⚙️</button>
+
+      <div id="settingsPanel" role="dialog" aria-modal="false" aria-labelledby="settingsTitle">
+        <header>
+          <div id="settingsTitle">Settings</div>
+          <button id="closeSettings" aria-label="Close">✕</button>
+        </header>
+
+        <div class="settings-row">
+          <div class="settings-kv">Version</div>
+          <div><code id="appVersion">1.0.0</code></div>
+        </div>
+      </div>
 
       <div class="row">
-        <div class="title">THERMOSTAT</div>
+        <div class="title title-main">THERMOSTAT</div>
         <div style="display:flex;gap:6px;align-items:center;">
           <div id="badge-mode" class="badge">MODE: —</div>
-          <div id="badge-fan"  class="badge">FAN: —</div>
+          <div id="badge-fan" class="badge">FAN: —</div>
         </div>
       </div>
 
@@ -145,7 +204,7 @@
       <div class="sp"></div>
 
       <div class="grid">
-        <button class="btn up"   id="btn-up">▲ +1°</button>
+        <button class="btn up" id="btn-up">▲ +1°</button>
         <button class="btn down" id="btn-down">▼ −1°</button>
       </div>
 
@@ -165,15 +224,13 @@
         <button class="seg" data-fan="on">On</button>
         <button class="seg" data-fan="auto">Auto</button>
       </div>
-
     </div>
   </div>
 
-  <!-- Pin a second hint exactly at the bottom edge (optional; remove if you only want the in-card hint) -->
   <div class="swipe-hint" aria-hidden="true">Swipe up to close</div>
 
 <script>
-  // ------- State (unchanged behavior) -------
+  // ------- State handling -------
   function has(k){ return localStorage.getItem(k) !== null; }
   function get(k,d){ return has(k) ? localStorage.getItem(k) : d; }
   function set(k,v){ localStorage.setItem(k, v); }
@@ -203,7 +260,6 @@
     document.querySelectorAll('#mode-bar .seg').forEach(b=>{
       b.classList.toggle('active', b.dataset.mode === state.mode);
     });
-
     document.querySelectorAll('#fan-bar .seg').forEach(b=>{
       b.classList.toggle('active', b.dataset.fan === state.fan);
     });
@@ -239,12 +295,12 @@
     render(); save();
   }
 
-  // ------- Press-and-hold for ▲ / ▼ (adds to original behavior) -------
+  // Press-and-hold
   function setupHold(el, delta){
     let holdTimer=null, repeatTimer=null, accelTimer=null;
     const start = (e) => {
       e.preventDefault();
-      changeTemp(delta); // immediate step (tap)
+      changeTemp(delta);
       holdTimer = setTimeout(() => {
         repeatTimer = setInterval(() => changeTemp(delta), 120);
         accelTimer = setTimeout(() => {
@@ -264,7 +320,7 @@
   setupHold(document.getElementById('btn-up'),   +1);
   setupHold(document.getElementById('btn-down'), -1);
 
-  // ------- Mode/Fan click handlers (as before) -------
+  // Mode/Fan clicks
   document.querySelectorAll('#mode-bar .seg').forEach(btn=>{
     btn.addEventListener('click', ()=>{
       state.mode = btn.dataset.mode; render(); save();
@@ -276,15 +332,34 @@
     });
   });
 
-  // Initial paint
   render();
 
-  // (Optional) SW registration — keep as you had it
+  // Service Worker registration
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
       navigator.serviceWorker.register('./service-worker.js');
     });
   }
+
+  // ----- Settings panel wiring -----
+  const APP_VERSION = "1.0.0";
+  const settingsBtn = document.getElementById('settingsBtn');
+  const settingsPanel = document.getElementById('settingsPanel');
+  const closeSettings = document.getElementById('closeSettings');
+  document.getElementById('appVersion').textContent = APP_VERSION;
+
+  function showPanel(show){ settingsPanel.style.display = show ? 'block' : 'none'; }
+
+  settingsBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    showPanel(settingsPanel.style.display !== 'block');
+  });
+  closeSettings.addEventListener('click', () => showPanel(false));
+  document.addEventListener('click', (e) => {
+    if (settingsPanel.style.display === 'block' && !settingsPanel.contains(e.target) && e.target !== settingsBtn)
+      showPanel(false);
+  });
+  document.addEventListener('keydown', (e) => { if (e.key === 'Escape') showPanel(false); });
 </script>
 </body>
 </html>
